fix background image not showing issue in crew page in mobile view

--- a/index.css
+++ b/index.css
@@ -477,7 +477,7 @@ body {
 
 /* crew */
 .crew {
-    background-image: url(./assets/home/background-crew-mobile.jpg);
+    background-image: url(./assets/crew/background-crew-mobile.jpg);
 }
 
 @media (min-width: 35rem) {
